# Meeting-RAG-Local

./: .env.example  .gitignore  README.md  pyproject.toml  run_eval.py
.github/workflows/: ci.yml
docs/: architecture.md  dataset.md  download-ami.md  evaluation.md  setup-windows.md
migrations/: 0001_init.sql  0002_retrieval_chunk_key.sql
scripts/: __init__.py  benchmark_rag.py  build_turns.py  check_gpu.py  download_ami.md  ingest_embeddings.py  ingest_many_meetings.py  parse_ami_xml.py  report_ami_meeting_readiness.py  run_diarization.py  run_eval.py  run_migrations.py  run_transcription.py  smoke_rag.py
src/meeting_pipeline/: __init__.py  cache_utils.py  config.py  logging_utils.py  timing.py
src/meeting_pipeline/app/: __init__.py  (+2 more)
tests/: test_alignment_wrapper.py  test_answer_generator.py  test_app_components.py  test_app_orchestration.py  test_attribution.py  test_benchmark_rag_script.py  test_build_turns_script.py  test_cache_utils.py  test_command_contracts.py  test_config.py  test_diarization_wrapper.py  test_embedder.py  test_gpu_utils.py  test_ingest_embeddings_script.py  test_ingest_many_meetings_script.py  test_migrations.py  test_multiturn_regression.py  test_ollama_client.py  test_parse_ami_xml.py  test_pgvector_search.py  test_query_rewriter.py  test_report_ami_meeting_readiness_script.py  test_repository.py  test_retrieval_chunk_builder.py  test_retrieval_eval.py  test_retriever.py  test_run_diarization_script.py  test_run_eval_script.py  test_run_transcription_script.py  test_transcript_eval.py  test_transcript_schemas.py  test_turn_builder.py  test_whisperx_runner.py
(+30 files in other folders)
